--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "@types/express": "^5.0.6",
         "@types/node": "^25.3.0",
         "prisma": "7.4.1",
+        "ts-node": "^10.9.2",
         "tsx": "4.21.0",
         "typescript": "^5.9.3"
     }
